--- a/Bootstrap/Museum_of_Candy/index.html
+++ b/Bootstrap/Museum_of_Candy/index.html
@@ -29,7 +29,10 @@
 	</head>
 
 	<body>
-		<nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md">
+		<nav
+			id="mainNavbar"
+			class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+		>
 			<a href="#" class="navbar-brand">CANDY</a>
 			<button
 				class="navbar-toggler"
@@ -47,6 +50,7 @@
 				</ul>
 			</div>
 		</nav>
+
 		<div class="container"></div>
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
