--- a/Bootstrap/Museum_of_Candy/index.html
+++ b/Bootstrap/Museum_of_Candy/index.html
@@ -51,7 +51,97 @@
 			</div>
 		</nav>
 
-		<div class="container"></div>
+		<!-- first row -->
+		<section class="container-fluid px-0">
+			<div class="row align-items-center">
+				<div class="col-lg-6">
+					<div
+						id="headingGroup"
+						class="text-center text-white d-none d-lg-block mt-5"
+					>
+						<h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<img class="img-fluid" src="imgs/hand2.png" alt="" />
+				</div>
+			</div>
+		</section>
+
+		<!-- second row -->
+		<section class="container-fluid px-0">
+			<div class="row align-items-center content">
+				<div class="col-md-6 order-2 order-md-1">
+					<img src="imgs/milk.png" class="img-fluid" alt="" />
+				</div>
+				<div class="col-md-6 text-center order-1 order-md-2">
+					<div class="row justify-content-center">
+						<div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+							<h2>MUSEUM OF CANDY</h2>
+							<img
+								src="imgs/lolli_icon.png"
+								alt=""
+								class="d-none d-lg-inline"
+							/>
+							<p class="lead">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+								odio numquam quo quis vitae magni impedit voluptates amet
+								expedita, tempore doloribus. Magni ex iste cumque labore!
+								Voluptatum iusto officiis modi.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- third row -->
+			<div class="row align-items-center content">
+				<div class="col-md-6 text-center">
+					<div class="row justify-content-center">
+						<div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+							<h2>MUSEUM OF CANDY</h2>
+							<img
+								src="imgs/lolli_icon.png"
+								alt=""
+								class="d-none d-lg-inline"
+							/>
+							<p class="lead">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<img class="img-fluid" src="imgs/gumball.png" alt="" />
+				</div>
+			</div>
+
+			<!-- forth row -->
+			<div class="row align-items-center content">
+				<div class="col-md-6 order-2 order-md-1">
+					<img src="imgs/sprinkles.png" class="img-fluid" alt="" />
+				</div>
+				<div class="col-md-6 text-center order-1 order-md-2">
+					<div class="row justify-content-center">
+						<div class="col-10 col-lg-8 blurb">
+							<h2>MUSEUM OF CANDY</h2>
+							<img
+								src="imgs/lolli_icon.png"
+								alt=""
+								class="d-none d-lg-inline"
+							/>
+							<p class="lead">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+								odio numquam quo quis vitae magni impedit voluptates amet
+								expedita, tempore doloribus. Magni ex iste cumque labore!
+								Voluptatum iusto officiis modi.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script
@@ -69,5 +159,13 @@
 			integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 			crossorigin="anonymous"
 		></script>
+		<script>
+			$(function () {
+				$(document).scroll(function () {
+					var $nav = $('#mainNavbar')
+					$nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height())
+				})
+			})
+		</script>
 	</body>
 </html>
